2009-09-27  Ivan Maidanski <ivmai@mail.ru>

	* include/private/gc_locks.h (GC_allocate_ml, GC_lock_holder,
	GC_collecting, GC_mark_lock_holder, GC_need_to_lock): Use "extern"
	(for the global variable declaration) again.
	* include/private/gc_pmark.h (GC_n_mark_procs, GC_mark_stack_size,
	GC_mark_stack_limit, GC_mark_stack_top, GC_mark_stack,
	GC_mark_stack_too_small, GC_mark_state): Ditto.
	* include/private/gcconfig.h (GC_register_stackbottom): Ditto.
	* include/private/pthread_support.h (GC_threads,
	GC_thr_initialized, GC_in_thread_creation): Ditto.
	* include/private/gc_priv.h: Ditto (for all global variables).

2009-09-27  Ivan Maidanski <ivmai@mail.ru>

	* real_malloc.c: Include private/config.h if HAVE_CONFIG_H.

2009-09-27  Ivan Maidanski <ivmai@mail.ru>

	* allchblk.c (GC_hblkfreelist): Define as STATIC.
	* blacklst.c (GC_total_stack_black_listed): Ditto.
	* include/private/gc_priv.h (GC_hblkfreelist, GC_stopped_mark,
	GC_total_stack_black_listed, GC_push_stubborn_structures): Remove
	declaration.
	* mark_rts.c (GC_stopped_mark): Add declaration (only if
	THREAD_LOCAL_ALLOC).
	* allchblk.c (GC_fail_count): Move the declaration out of
	GC_allochblk_nth(); remove "extern".
	* alloc.c (IF_THREADS): Remove unused macro.
	* alloc.c (GC_world_stopped): Define only if THREAD_LOCAL_ALLOC.
	* alloc.c (GC_stopped_mark): Set GC_world_stopped value only if
	THREAD_LOCAL_ALLOC.
	* alloc.c (GC_bytes_found, GC_collection_in_progress,
	GC_check_tls, GC_unmap_threshold, GC_force_unmap_on_gcollect):
	Remove K&R-style "extern" for the declaration.
	* dbg_mlc.c (GC_free_inner): Ditto.
	* dyn_load.c (GC_repeat_read, GC_roots_present, GC_is_heap_base,
	GC_get_next_stack, GC_no_win32_dlls, GC_wnt): Ditto.
	* finalize.c (GC_fail_count): Ditto.
	* include/private/gc_hdrs.h (GC_hdr_cache_hits,
	GC_hdr_cache_misses): Ditto.
	* include/private/gc_locks.h (GC_allocate_ml, GC_lock_holder,
	GC_lock, GC_collecting, GC_mark_lock_holder, GC_need_to_lock):
	Ditto.